# agent-long-term-memory

./: .gitignore  README.md
backend/: main.py  pyproject.toml
backend/app/core/: __init__.py  config.py  dependencies.py
backend/app/prompts/: __init__.py  memory_prompts.py  system_prompts.py
backend/app/routes/: __init__.py  chat.py
backend/app/schemas/: __init__.py  chat_schemas.py  memory_schemas.py
backend/app/services/: llm_service.py  memory_service.py
frontend/: index.html  script.js  style.css
